# ChangeLog for sys-apps/less
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*less-462.ebuild (18 Dec 2013)

  18 Dec 2013; Martin Väth <martin@mvath.de>:
  Bump less version

*less-460-r1.ebuild (21 Nov 2013)

  21 Nov 2013; Martin Väth <martin@mvath.de>:
  Bump less-select version

*less-460.ebuild (13 Jul 2013)

  14 Aug 2013; Martin Väth <martin@mvath.de>:
  Simplify EPREFIX (without revision bump)

  13 Jul 2013; Martin Väth <martin@mvath.de>:
  Bump less, less-select, and patch version

*less-459-r1.ebuild (28 May 2013)

  28 May 2013; Martin Väth <martin@mvath.de>:
  Bump less-select version. Update dependencies

*less-459.ebuild (28 May 2013)

  28 May 2013; Martin Väth <martin@mvath.de>:
  Bump less version.

*less-458.ebuild (05 Apr 2013)

  05 Apr 2013; Martin Väth <martin@mvath.de>:
  Bump less version.

*less-457.ebuild (10 Dec 2012)

  20 Feb 2013; Martin Väth <martin@mvath.de>:
  Update code2color handling from main tree.

  10 Dec 2012; Martin Väth <martin@mvath.de>:
  Bump less version.

*less-456.ebuild (09 Nov 2012)

  09 Nov 2012; Martin Väth <martin@mvath.de>:
  Bump less version.

*less-452.ebuild (23 Oct 2012)

  23 Oct 2012; Martin Väth <martin@mvath.de>:
  Bump less version. Add USE=sources

*less-451.ebuild (23 Jul 2012)

  21 Sep 2012; Martin Väth <martin@mvath.de>:
  Bump to EAPI=5

  23 Jul 2012; Martin Väth <martin@mvath.de>:
  Bump less version. Simplify doc install and pcre passing as in main tree.

*less-450.ebuild (16 Jul 2012)

  16 Jul 2012; Martin Väth <martin@mvath.de>:
  Bump less version.

*less-449.ebuild (28 Jun 2012)

  28 Jun 2012; Martin Väth <martin@mvath.de>:
  Bump less version.

*less-445-r1.ebuild (10 Nov 2011)

  12 May 2012; Martin Väth <martin@mvath.de>:
  base->eutils

  15 Apr 2012; Martin Väth <martin@mvath.de>:
  Inherit base

  02 Mar 2012; Martin Väth <martin@mvath.de>:
  Change to github repository.

  31 Jan 2012; Martin Väth <martin@mvath.de>: