@@ -183,7 +183,8 @@ lesspipe() {
 
 	### Encryption stuff ###
 	*.crl) openssl crl -hash -text -noout -in "$1" ;;
-	*.pem) openssl x509 -hash -text -noout -in "$1" ;;
+	*.csr) openssl req -text -noout -in "$1" ;;
+	*.crt|*.pem) openssl x509 -hash -text -noout -in "$1" ;;
 
 # May not be such a good idea :)
 #	### Device nodes ###
@@ -235,7 +236,7 @@ if [[ -z $1 ]] ; then
 elif [[ $1 == "-V" || $1 == "--version" ]] ; then
 	Id="cvsid"
 	cat <<-EOF
-		$Id: lesspipe.sh,v 1.52 2013/04/29 18:37:49 vapier Exp $
+		$Id: lesspipe.sh,v 1.53 2013/08/06 21:35:30 vapier Exp $
 		Copyright 2001-2013 Gentoo Foundation
 		Mike Frysinger <vapier@gentoo.org>
 		     (with plenty of ideas stolen from other projects/distros)
