@@ -1,1 +1,1 @@
-DIST lesspipe-1.72.tar.gz 105367 SHA256 d62b25fe73928f9454de373296325dfb2fa02e0718d33ad87c3b083e6e5ce5d4 SHA512 838ec55ea034a372710988dcd4257c77643059b2642c271653c1564716627344a5ea414a77829029488a14dd033b3e278d0b71dbbcb444b8d3d90e8358e6e7bd WHIRLPOOL 4db91df5d41df6b30d70e85d8a0967f3cbe46303b9435281081c1190f43a987720be8bb433a4802aff0555b88fe7c2b3c9ae13aed06287fe269674059071427c
+DIST lesspipe-1.82.tar.gz 112854 SHA256 3fd345b15d46cc8fb0fb1d625bf8d881b0637abc34d15df45243fd4e5a8f4241 SHA512 6dd5f5e00755b7284d0867eca6e9f815a2cee38dcba3fd632f29f420e6295e1a7505bab4b8461f5f88d75fc5495af97c5ebdc815d2d46850247e6289a181130d WHIRLPOOL b236a07d1867e50d01502014f12f93322d1d87aa46c630ad1b4393f129ed9f63f42e085ae8e1e6bb164ace06f19e407528af99d4e466b061e24ab38e38b39059
