@@ -19,14 +19,15 @@
 		<flag name="gpg">Support gpg files</flag>
 		<flag name="groff">Support man and nroff files</flag>
 		<flag name="html2text">Support html files with app-text/html2text; this overrides links, lynx, elinks, w3m</flag>
-		<flag name="id3v2">Support mp3 files with media-sound/id3v2; this overrides mp3info</flag>
+		<flag name="id3v2">Support mp3 files with media-sound/id3v2; this overrides mp3info2, mp3info</flag>
 		<flag name="image">Support image/jpg files</flag>
 		<flag name="isoinfo">Support CD/DVD-iso files</flag>
 		<flag name="libplist">Support Apple Property List files</flag>
 		<flag name="links">Support html files with www-client/links; ignored if html2text is set; this overrides lynx, elinks, w3m</flag>
 		<flag name="lynx">Support html files with www-client/lynx; ignored if html2text or links is set; this overrides elinks, w3m</flag>
 		<flag name="lzip">Support lzip files</flag>
-		<flag name="mp3info">Support mp3 files with media-sound/mp3info; unused if id3v2 is set</flag>
+		<flag name="mp3info">Support mp3 files with media-sound/mp3info; unused if id3v2 or mp3info2 is set</flag>
+		<flag name="mp3info2">Support mp3 files with dev-perl/MP3-Tag (mp3info2); ignored if id3v2 is set; this overrides mp3info</flag>
 		<flag name="ooffice">Support OpenOffice files</flag>
 		<flag name="p7zip">Support p7zip files</flag>
 		<flag name="pdf">Support pdf files</flag>
