@@ -2,7 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-*lesspipe-1.72.ebuild (11 Nov 2012)
+*lsespipe-1.82 (24 Dec 2013)
+
+  24 Dec 2013; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild.
+
+*lesspipe-1.72 (11 Nov 2012)
 
   11 Nov 2012; Martin Väth <martin@mvath.de>:
   New Ebuild from scratch
