@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*less-462-r1.ebuild (24 Dec 2013)
+
+  24 Dec 2013; Martin Väth <martin@mvath.de>:
+  Bump gentoo-builtin lesspipe
+
 *less-462.ebuild (18 Dec 2013)
 
   18 Dec 2013; Martin Väth <martin@mvath.de>:
